Complete making radio button effects on booking-section

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "advanced-css-and-sass",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "compile:sass": "node-sass sass/main.scss css/style.css"
@@ -10,5 +9,17 @@
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^4.11.0"
-  }
+  },
+  "dependencies": {
+    "live-server": "^1.2.1"    
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nmtoan251998/advanced-css-and-sass.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nmtoan251998/advanced-css-and-sass/issues"
+  },
+  "homepage": "https://github.com/nmtoan251998/advanced-css-and-sass#readme",
+  "description": ""
 }
