--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/font-awesome.css css/style.comp.css",
+    "compress:css": "node-sass css/style.comp.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css compress:css"    
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "node-sass": "^4.11.0"
+  "devDependencies": {    
+    "concat": "^1.0.3",
+    "node-sass": "^4.11.0",    
+    "npm-run-all": "^4.1.1"
   },
   "dependencies": {
-    "live-server": "^1.2.1"    
+    "live-server": "^1.2.1"
   },
   "repository": {
     "type": "git",
